# python_coding_exercise

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  Vagrantfile  setup.cfg  tox.ini
docs/: conf.py  index.rst
infrastructure/ansible/: playbook-development.yml
infrastructure/ansible/roles/pipx/tasks/: main.yml
infrastructure/ansible/roles/pyscaffold/tasks/: main.yml
infrastructure/ansible/roles/python/tasks/: main.yml
infrastructure/ansible/roles/tox/tasks/: main.yml
src/coding_exercise/: __init__.py
src/coding_exercise/application/: splitter.py
src/coding_exercise/domain/model/: cable.py
tests/coding_exercise/application/: test_splitter.py
tests/coding_exercise/domain/model/: test_cable.py
